@@ -9,6 +9,7 @@
  <property name="content_meta_type">ATSimpleStringCriterion</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATSimpleStringCriterion</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="immediate_view">base_edit</property>
  <property name="global_allow">False</property>
  <property name="filter_content_types">False</property>
