@@ -9,6 +9,7 @@
  <property name="content_meta_type">ATFolder</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATFolder</property>
+ <property name="icon_expr">string:${portal_url}/folder_icon.png</property>
  <property name="immediate_view">folder_listing</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">False</property>
