@@ -9,6 +9,7 @@
  <property name="content_meta_type">ATLink</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATLink</property>
+ <property name="icon_expr">string:${portal_url}/link_icon.png</property>
  <property name="immediate_view">link_view</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
