@@ -1,0 +1,49 @@
+<?xml version="1.0"?>
+<object name="Plone Site"
+   meta_type="Factory-based Type Information with dynamic views"
+   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title" i18n:translate=""></property>
+ <property name="description"
+      i18n:translate="">The portal_type for the root object in a Plone system.</property>
+ <property name="content_icon">site_icon.png</property>
+ <property name="content_meta_type">Plone Site</property>
+ <property name="product">CMFPlone</property>
+ <property name="factory">manage_addSite</property>
+ <property name="icon_expr">string:${portal_url}/site_icon.png</property>
+ <property name="immediate_view">folder_edit_form</property>
+ <property name="global_allow">False</property>
+ <property name="filter_content_types">False</property>
+ <property name="allowed_content_types"/>
+ <property name="allow_discussion">False</property>
+ <property name="default_view">folder_listing</property>
+ <property name="view_methods">
+  <element value="folder_listing"/>
+  <element value="folder_summary_view"/>
+  <element value="folder_tabular_view"/>
+  <element value="atct_album_view"/>
+ </property>
+ <alias from="(Default)" to="(dynamic view)"/>
+ <alias from="edit" to="folder_edit_form"/>
+ <alias from="sharing" to="@@sharing"/>
+ <alias from="view" to="(selected layout)"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    url_expr="string:${object_url}" visible="True"
+    i18n:attributes="title">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object" condition_expr=""
+    url_expr="string:${object_url}/edit" visible="True"
+    i18n:attributes="title">
+  <permission value="Manage properties"/>
+ </action>
+ <action title="Folder view" action_id="folderlisting" category="folder"
+    condition_expr="" url_expr="string:${folder_url}/view" visible="False"
+    i18n:attributes="title">
+  <permission value="View"/>
+ </action>
+ <action title="External Edit" action_id="external_edit" category="object"
+    condition_expr="" url_expr="string:$object_url/external_edit"
+    visible="False" i18n:attributes="title">
+  <permission value="Modify portal content"/>
+ </action>
+</object>
