@@ -8,6 +8,7 @@
  <property name="content_meta_type">TempFolder</property>
  <property name="product">CMFCore</property>
  <property name="factory">manage_addPortalFolder</property>
+ <property name="icon_expr">string:${portal_url}/folder_icon.png</property>
  <property name="immediate_view">folder_edit_form</property>
  <property name="global_allow">False</property>
  <property name="filter_content_types">False</property>
